@@ -1,6 +1,12 @@
 2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
+	  src/GParted_Core.cc: renamed resize_partition to
+	  resize_move_partition to better reflect its functionality.
+
+2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
 	  src/GParted_Core.cc: did more work on moving
 
 2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
